# python-scaffolds

./: .gitignore  README.rst  pyproject.toml
demo/: example.py  example_add_index.py  example_pony.py  example_whoosh.py
demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
