[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Demo of Python modern practise"
license = "MIT"
authors = ["gackle <gackle83@outlook.com>"]
readme = 'README.rst'

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.52.0"
uvicorn = "^0.11.3"
httpx = "^0.12.1"
pony = "^0.7.13"
cx_Oracle = "^7.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
